set(CPU4040_TARGET_NAME cpu4040)

set(CPU4040_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu4040.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu4040.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/disasm4040.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/disasm4040.hpp
)

add_library(${CPU4040_TARGET_NAME} STATIC ${SHARED_SOURCES} ${CPU4040_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${CPU4040_SOURCES})

target_include_directories(${CPU4040_TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${CPU4040_TARGET_NAME} PROPERTIES
    FOLDER shared
)
