set(CPU4040_LIB_TARGET_NAME cpu4040_lib)
set(ASM4040_LIB_TARGET_NAME asm4040_lib)

set(CPU4040_LIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu4040.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu4040.hpp
)

set(ASM4040_LIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/asm4040.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/asm4040.hpp
)

add_library(${CPU4040_LIB_TARGET_NAME} STATIC ${SHARED_SOURCES} ${CPU4040_LIB_SOURCES})
add_library(${ASM4040_LIB_TARGET_NAME} STATIC ${SHARED_SOURCES} ${ASM4040_LIB_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${CPU4040_LIB_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${ASM4040_LIB_SOURCES})

target_include_directories(${CPU4040_LIB_TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_include_directories(${CPU4040_LIB_TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${CPU4040_LIB_TARGET_NAME} PROPERTIES
    FOLDER shared/4040
)
set_target_properties(${ASM4040_LIB_TARGET_NAME} PROPERTIES
    FOLDER shared/4040
)
