set(CPU8008_TARGET_NAME cpu8008)

set(CPU8008_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu8008.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu8008.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/disasm8008.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/disasm8008.hpp
)

add_library(${CPU8008_TARGET_NAME} STATIC ${SHARED_SOURCES} ${CPU8008_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${CPU8008_SOURCES})

target_include_directories(${CPU8008_TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${CPU8008_TARGET_NAME} PROPERTIES
    FOLDER shared
)
