add_subdirectory(asm8008)

set(CPU8008_LIB_TARGET_NAME cpu8008_lib)

set(CPU8008_LIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu8008.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cpu8008.hpp
)

add_library(${CPU8008_LIB_TARGET_NAME} STATIC ${SHARED_SOURCES} ${CPU8008_LIB_SOURCES})
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX source FILES ${CPU8008_LIB_SOURCES})

target_include_directories(${CPU8008_LIB_TARGET_NAME} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

set_target_properties(${CPU8008_LIB_TARGET_NAME} PROPERTIES
    FOLDER shared/8008
)
